--- a/index.html
+++ b/index.html
@@ -33,7 +33,88 @@
 		  width: 300px;
 		  height: 100px;
 		}
-		
+		.navbar {
+  background-color: #f8f9fa;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.navbar-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000;
+}
+
+.brand img {
+  margin-right: 10px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+  margin: 0;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: #000;
+  padding: 8px 16px;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+
+.nav-links li a:hover {
+  background-color: #44c17c;
+  color: #fff;
+}
+
+.menu-toggle {
+  display: none;
+  font-size: 26px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: #f8f9fa;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 200px;
+    border-left: 1px solid #ccc;
+    padding: 1rem;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+}
+
 
 		nav li a:hover {
 		  background-color: rgb(68, 193, 124);
@@ -254,32 +335,21 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="color:#000000;">
-		<div class="container" style="font-size:20px;">
-			<a class="navbar-brand" href="index.html" style="font-size:28px;"><img src="images/RB.png" alt="Resume Builder Logo"
-					height="45px"> ResumeCraft</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="#pageHeader">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="Form.html">Create Resume</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#templates">Resume Templates</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="faq.html">FAQ</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<nav class="navbar">
+  <div class="navbar-container">
+    <a href="index.html" class="brand">
+      <img src="images/RB.png" alt="Resume Builder Logo" height="45">
+      <span>ResumeCraft</span>
+    </a>
+    <button class="menu-toggle" id="menuToggle">&#9776;</button>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#pageHeader">Home</a></li>
+      <li><a href="Form.html">Create Resume</a></li>
+      <li><a href="#templates">Resume Templates</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+    </ul>
+  </div>
+</nav>
 	<header class="page-header gradient" id="pageHeader">
 		<div class="container">
 			<div class="row">
