--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 	</div>
 	
 	<footer class="page-footer font-small black">
-		<div class="footer-copyright text-center py-3">© 2024 Copyright Resume Builder
+		<div class="footer-copyright text-center py-3">© 2025 Copyright ResumeCraft
 		</div>
 	</footer>
 </body>
